[gd_scene load_steps=5 format=2]

[ext_resource path="res://脚本/enemy1.gd" type="Script" id=1]
[ext_resource path="res://素材/FZXIANGSU16.TTF" type="DynamicFontData" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.5, 8.5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="enemy1" type="Area2D" groups=["enemy"]]
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.5, -0.5 )
scale = Vector2( 2.35, 0.85 )

[node name="Timer_攻击间隔" type="Timer" parent="."]
wait_time = 6.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -0.5 )
shape = SubResource( 2 )

[node name="旋转" type="Node2D" parent="."]
position = Vector2( -1, -1 )

[node name="Timer_攻击结束" type="Timer" parent="."]
wait_time = 6.0

[node name="Timer_转换方式" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.0
margin_top = -9.0
margin_right = 25.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 3 )
text = "张乐平"
__meta__ = {
"_editor_description_": ""
}

[connection signal="area_entered" from="." to="." method="_on_enemy1_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer_攻击间隔" to="." method="_on_Timer_attackwait_timeout"]
[connection signal="timeout" from="Timer_攻击结束" to="." method="_on_Timer_attackend_timeout"]
[connection signal="timeout" from="Timer_转换方式" to="." method="_on_Timer_ChangePattern_timeout"]
